# libs/swagger/rule.json
@@ -8,6 +8,40 @@
   "basePath": "/",
   "schemes": ["http"],
   "paths": {
+    "/user/register": {
+      "post": {
+        "tags": ["Auth"],
+        "summary": "register",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/auth"
+            }
+          }
+        ],
+        "responses": {}
+      }
+    },
+    "/user/login": {
+      "post": {
+        "tags": ["Auth"],
+        "summary": "login",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/auth"
+            }
+          }
+        ],
+        "responses": {}
+      }
+    },
     "/": {
       "get": {
         "tags": ["Product"],
@@ -44,6 +78,13 @@
     }
   },
   "definitions": {
+    "auth": {
+      "type": "object",
+      "properties": {
+        "username": { "type": "string", "example": "" },
+        "password": { "type": "string", "example": "" }
+      }
+    },
     "product": {
       "type": "object",
       "properties": {
